--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.slideimage {
+  height: 90vh;
+  width: 100%;
+}
+
+.aboutimage {
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+}
+
+.projectimg{
+  height: 150px;
+  width: 100%;
+}
